projetGL/src/test/deca/syntax/invalid/ourTests/test_name_true.deca
{
    float true=3.14;
}